Fixing a bug where color button panel has scrollbar in FF.
git-svn-id: http://svn.ckeditor.com/CKEditor/branches/features/aria@4943 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/panel.css
+++ b/_source/skins/kama/panel.css
@@ -46,8 +46,7 @@ html.cke_skin_kama_container
 
 body.cke_panel_frame
 {
-	overflow: auto;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 ul.cke_panel_list
